# coffee-machine-controller

./: .gitignore  README.md
back-server/: Cargo.toml  down.sql  log_config.yml  push_to_pi.sh  up.sql
back-server/src/: main.rs  schema.rs  tests.rs
back-server/src/controller/: coffee_controller.rs
back-server/src/model/: coffee.rs
back-server/src/util/: db_interaction.rs  gpio.rs  mod.rs
front-server/: Cargo.toml  Trunk.toml  index.html
front-server/src/: main.rs  model.rs
front-server/src/api/: calls.rs
front-server/src/components/: mod.rs  on_off_button.rs  set_timer.rs  title.rs
