[package]
name = "back-server"
version = "0.1.0"
edition = "2021"
authors = ["Yves Bruckmayer <y.bruckmayer@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.6", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
log = "0.4.21"
log4rs = "1.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
